--- a/java/org/apache/catalina/realm/LocalStrings.properties
+++ b/java/org/apache/catalina/realm/LocalStrings.properties
@@ -29,7 +29,7 @@ jaasRealm.loginContextCreated=JAAS LoginContext created for username "{0}"
 jaasRealm.checkPrincipal=Checking Principal "{0}" [{1}]
 jaasRealm.userPrincipalSuccess=Principal "{0}" is a valid user class. We will use this as the user Principal.
 jaasRealm.userPrincipalFailure=No valid user Principal found
-jaasRealm.rolePrincipalAdd=Adding role Principal "{0}" to this user Principal's roles
+jaasRealm.rolePrincipalAdd=Adding role Principal "{0}" to this user Principal''s roles
 jaasRealm.rolePrincipalFailure=No valid role Principals found.
 jaasCallback.username=Returned username "{0}"
 jdbcRealm.authenticateFailure=Username {0} NOT successfully authenticated
