--- a/java/org/apache/catalina/ha/deploy/LocalStrings.properties
+++ b/java/org/apache/catalina/ha/deploy/LocalStrings.properties
@@ -20,7 +20,7 @@ farmWarDeployer.deployEnd=Deployment from [{0}] finished.
 farmWarDeployer.fileCopyFail=Unable to copy from [{0}] to [{1}]
 farmWarDeployer.hostOnly=FarmWarDeployer can only work as host cluster subelement!
 farmWarDeployer.hostParentEngine=FarmWarDeployer can only work if parent of [{0}] is an engine!
-farmWarDeployer.mbeanNameFail=Can't construct MBean object name for engine [{0}] and host [{1}]
+farmWarDeployer.mbeanNameFail=Can''t construct MBean object name for engine [{0}] and host [{1}]
 farmWarDeployer.alreadyDeployed=webapp [{0}] are already deployed.
 farmWarDeployer.modInstall=Installing webapp [{0}] from [{1}]
 farmWarDeployer.modRemoveFail=No removal
@@ -39,7 +39,7 @@ farmWarDeployer.sendEnd=Send cluster war deployment path [{0}], war [{1}] finish
 farmWarDeployer.sendFragment=Send cluster war fragment path [{0}], war [{1}] to [{2}]
 farmWarDeployer.sendStart=Send cluster war deployment path [{0}], war [{1}] started.
 farmWarDeployer.servicingDeploy=Application [{0}] is being serviced. Touch war file [{1}] again!
-farmWarDeployer.servicingUndeploy=Application [{0}] is being serviced and can't be removed from backup cluster node
+farmWarDeployer.servicingUndeploy=Application [{0}] is being serviced and can''t be removed from backup cluster node
 farmWarDeployer.started=Cluster FarmWarDeployer started.
 farmWarDeployer.stopped=Cluster FarmWarDeployer stopped.
 farmWarDeployer.undeployEnd=Undeployment from [{0}] finished.
