--- a/java/org/apache/catalina/ha/session/LocalStrings.properties
+++ b/java/org/apache/catalina/ha/session/LocalStrings.properties
@@ -62,7 +62,7 @@ deltaRequest.ssid.null=Session Id is null for setSessionId
 deltaSession.notifying=Notifying cluster of expiration primary={0} sessionId [{1}]
 deltaSession.readSession=readObject() loading session [{0}]
 deltaSession.writeSession=writeObject() storing session [{0}]
-jvmRoute.cannotFindSession=Can't find session [{0}]
+jvmRoute.cannotFindSession=Can''t find session [{0}]
 jvmRoute.changeSession=Changed session from [{0}] to [{1}]
 jvmRoute.failover=Detected a failover with different jvmRoute - orginal route: [{0}] new one: [{1}] at session id [{2}]
 jvmRoute.foundManager=Found Cluster Manager {0} at {1}
@@ -80,4 +80,4 @@ backupManager.noCluster=no cluster associated with this context: [{0}]
 backupManager.startUnable=Unable to start BackupManager: [{0}]
 backupManager.startFailed=Failed to start BackupManager: [{0}]
 backupManager.stopped=Manager [{0}] is stopping
-clusterSessionListener.noManager=Context manager doesn't exist:{0}
+clusterSessionListener.noManager=Context manager doesn''t exist:{0}
