New upstream version 8.5.18

--- a/build.xml
+++ b/build.xml
@@ -566,6 +566,9 @@
         <exclude name="test/webresources/**"/>
         <!-- Exclude test files with unusual encodings -->
         <exclude name="test/webapp/jsp/encoding/**"/>
+        <!-- Exclude developer specific local files -->
+        <exclude name="build.properties" />
+        <exclude name="res/maven/mvn.properties" />
       </fileset>
       <fileset dir="modules/jdbc-pool" >
         <exclude name=".*/**"/>
@@ -1328,6 +1331,7 @@
         <fileset dir="test">
           <include name="META-INF/**"/>
           <include name="**/service-config.txt"/>
+          <include name="**/logging-non-rotatable.properties"/>
         </fileset>
     </copy>
   </target>
